--- a/app/src/main/res/layout/activity_initial.xml
+++ b/app/src/main/res/layout/activity_initial.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/bg"
-    tools:context=".initialActivity">
+    android:background="@drawable/bg">
 <!--初始页面-->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:paddingBottom="10dp">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            app:srcCompat="@drawable/chongfeng" />
-    </RelativeLayout>
+            android:src="@drawable/chongfeng"
+            android:layout_gravity="center"
+            />
+    </LinearLayout>
 
 
 
@@ -26,10 +26,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="90dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginBottom="120dp"
         android:paddingRight="44dp"
         android:paddingLeft="44dp"
+        android:layout_gravity="bottom"
         >
 
     <Button
@@ -37,10 +37,11 @@
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginBottom="5dp"
+        android:gravity="center"
         android:background="@drawable/circlebutton"
         android:layout_alignParentLeft="true"
 
-        android:text="登录" />
+        android:text="登  录" />
 
     <Button
         android:id="@+id/btn_register"
@@ -48,10 +49,11 @@
         android:layout_width="120dp"
         android:layout_height="40dp"
         android:layout_marginBottom="5dp"
+        android:gravity="center"
         android:background="@drawable/circlebutton"
         android:layout_alignParentRight="true"
 
-        android:text="注册" />
+        android:text="注  册" />
 
     </RelativeLayout>
 
