add back_icon layout

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,13 +7,11 @@
     android:orientation="vertical"
     android:background="@color/light_sun"
     tools:context=".registerActivity">
-    <ImageView
-        android:id="@+id/back"
-        android:paddingLeft="10dp"
-        android:paddingTop="5dp"
-        android:layout_width="30dp"
-        android:layout_height="50dp"
-        app:srcCompat="@drawable/back" />
+
+    <com.example.mytest.ui.icon.BackLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
