--- a/app/src/main/res/layout/easy_info.xml
+++ b/app/src/main/res/layout/easy_info.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="200dp"
+    android:orientation="vertical"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    >
+    android:paddingBottom="10dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -17,31 +17,33 @@
             android:paddingBottom="10dp"
             android:paddingTop="0dp"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/pimage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:layout_gravity="center"
-                android:scaleType="centerCrop"
-                />
+                android:scaleType="centerCrop" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingTop="10dp"
                 android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                >
+                android:paddingRight="5dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
+
                     <LinearLayout
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:layout_marginRight="2dp">
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -50,23 +52,24 @@
                             android:textStyle="bold"
 
                             />
+
                         <TextView
                             android:layout_width="26dp"
                             android:layout_height="wrap_content" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="名: "
                             android:lineSpacingExtra="@dimen/activity_horizontal_margin"
-                            android:textStyle="bold"
-                            />
+                            android:textStyle="bold" />
                     </LinearLayout>
+
                     <TextView
                         android:id="@+id/pname"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -74,20 +77,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="5dp"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:text="走失时间:"
                         android:textStyle="bold"
-                        android:layout_marginRight="2dp"
-                        />
+                        android:layout_marginRight="2dp" />
+
                     <TextView
                         android:id="@+id/pdate"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -95,20 +97,19 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="5dp"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:text="失踪位置:"
                         android:textStyle="bold"
-                        android:layout_marginRight="2dp"
-                        />
+                        android:layout_marginRight="2dp" />
+
                     <TextView
                         android:id="@+id/pplace"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -118,7 +119,6 @@
 
 
     </androidx.cardview.widget.CardView>
-
 
 
 </LinearLayout>
