--- a/app/src/main/res/layout/activity_a_detail.xml
+++ b/app/src/main/res/layout/activity_a_detail.xml
@@ -26,14 +26,14 @@
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="@drawable/toolbar" />
+
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/id_afind"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-    />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
