--- a/app/src/main/res/layout/activity_initial.xml
+++ b/app/src/main/res/layout/activity_initial.xml
@@ -2,59 +2,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/bg">
-<!--初始页面-->
+    android:background="@drawable/bg"
+    android:orientation="vertical">
+    <!--初始页面-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:paddingBottom="10dp">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:src="@drawable/chongfeng"
             android:layout_gravity="center"
-            />
+            android:src="@drawable/chongfeng" />
     </LinearLayout>
 
 
-
-
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
-        android:paddingRight="44dp"
-        android:paddingLeft="44dp"
-        android:layout_gravity="bottom"
-        >
+        android:layout_height="0dp"
+        android:layout_marginBottom="20dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="5dp"
-        android:gravity="center"
-        android:background="@drawable/circlebutton"
-        android:layout_alignParentLeft="true"
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/yellow_button"
+            android:gravity="center"
+            android:text="登          录"
+            android:textColor="@color/light_sun"
+            android:textSize="18dp"
+            />
 
-        android:text="登  录" />
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/white_button"
+            android:gravity="center"
+            android:text="注          册"
+            android:textSize="18dp"
+             />
 
-    <Button
-        android:id="@+id/btn_register"
+    </LinearLayout>
 
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="5dp"
-        android:gravity="center"
-        android:background="@drawable/circlebutton"
-        android:layout_alignParentRight="true"
-
-        android:text="注  册" />
-
-    </RelativeLayout>
 
 </LinearLayout>
