--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,8 +16,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="70dp"
-        >
+        android:paddingTop="70dp">
+
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
@@ -28,10 +28,10 @@
     </RelativeLayout>
 
     <TextView
-        android:paddingTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingTop="20dp"
         android:text="登 录"
         android:textColor="@color/grey"
         android:textSize="40dp" />
@@ -39,9 +39,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="374dp"
+        android:orientation="vertical"
         android:paddingLeft="44dp"
         android:paddingTop="20dp"
-        android:orientation="vertical"
         android:paddingRight="44dp">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -52,10 +52,10 @@
 
             <EditText
                 android:id="@+id/username2"
-                android:textSize="14dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:textSize="14dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -63,38 +63,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:hint="密码"
             app:counterEnabled="true"
-            app:counterMaxLength="20"
-            android:hint="密码">
+            app:counterMaxLength="20">
 
             <EditText
                 android:id="@+id/pwd"
-                android:textSize="14dp"
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"/>
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:textSize="14dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp">
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:hint="验证码">
 
                 <EditText
                     android:id="@+id/inputCode2"
-                    android:textSize="14dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:textSize="14dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -104,29 +104,29 @@
                 android:layout_height="39dp"
                 android:layout_gravity="right"
                 android:layout_marginLeft="10dp"
+                android:background="@color/heavy_sun"
+                android:gravity="center"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="2836"
                 android:textColor="#fff"
-                android:gravity="center"
-                android:textSize="24sp"
-                android:background="@color/heavy_sun" />
+                android:textSize="24sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="40dp"
-            >
+            android:paddingTop="40dp">
 
             <Button
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
+                android:layout_margin="5dp"
                 android:background="@drawable/yellow_button"
                 android:text="登       录"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="18dp" />
 
         </LinearLayout>
     </LinearLayout>
