--- a/app/src/main/res/layout/activity_my_relative.xml
+++ b/app/src/main/res/layout/activity_my_relative.xml
@@ -14,12 +14,10 @@
         android:background="@color/sun"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/back_myfind"
+        <com.example.mytest.ui.icon.BackLayout
+            android:id="@+id/back_myrelative"
             android:layout_width="60dp"
             android:layout_height="56dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
             android:src="@drawable/back" />
 
         <TextView
@@ -30,7 +28,6 @@
             android:text="我的寻亲信息"
             android:textColor="@color/white"
             android:textSize="20dp" />
-
 
 
     </LinearLayout>
