--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/light_sun"
+    android:orientation="vertical"
     tools:context=".registerActivity">
 
     <com.example.mytest.ui.icon.BackLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="30dp"
-        >
+        android:paddingTop="30dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -29,10 +28,10 @@
     </RelativeLayout>
 
     <TextView
-        android:paddingTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:paddingTop="10dp"
         android:text="注 册"
 
         android:textSize="38dp" />
@@ -40,9 +39,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="374dp"
+        android:orientation="vertical"
         android:paddingLeft="44dp"
         android:paddingTop="30dp"
-        android:orientation="vertical"
         android:paddingRight="44dp">
 
         <com.google.android.material.textfield.TextInputLayout
@@ -52,62 +51,62 @@
 
             <EditText
                 android:id="@+id/username"
-                android:textSize="14dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:textSize="14dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="密码"
             app:counterEnabled="true"
-            app:counterMaxLength="20"
-            android:hint="密码">
+            app:counterMaxLength="20">
 
             <EditText
                 android:id="@+id/pwd1"
-                android:textSize="14dp"
-
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textSize="14dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="重复密码"
             app:counterEnabled="true"
-            app:counterMaxLength="20"
-            android:hint="重复密码">
+            app:counterMaxLength="20">
 
             <EditText
                 android:id="@+id/pwd2"
-                android:textSize="14dp"
-
-                android:inputType="textPassword"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textSize="14dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:hint="验证码">
 
                 <EditText
                     android:id="@+id/inputCode"
-                    android:textSize="14dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:textSize="14dp" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
@@ -116,33 +115,33 @@
                 android:layout_height="39dp"
                 android:layout_gravity="right"
                 android:layout_marginLeft="10dp"
+                android:background="@color/heavy_sun"
+                android:gravity="center"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="1675"
                 android:textColor="#fff"
-                android:gravity="center"
-                android:textSize="24sp"
-                android:background="@color/heavy_sun"/>
+                android:textSize="24sp" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            >
+            android:layout_marginTop="20dp">
 
             <Button
                 android:id="@+id/btn_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:layout_margin="5dp"
                 android:background="@drawable/yellow_button"
                 android:text="注       册"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="18dp" />
         </LinearLayout>
 
     </LinearLayout>
-
 
 
 </LinearLayout>
