--- a/app/src/main/res/layout/find_info.xml
+++ b/app/src/main/res/layout/find_info.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingLeft="8dp"
-    android:paddingRight="8dp"
-    >
+    android:paddingRight="8dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -13,16 +12,16 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        >
+        android:layout_marginBottom="8dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
             android:paddingLeft="5dp"
             android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:paddingBottom="5dp">
 
             <ImageView
                 android:id="@+id/pfind_image"
@@ -34,77 +33,73 @@
             <LinearLayout
                 android:layout_width="180dp"
                 android:layout_height="match_parent"
-                android:paddingLeft="10dp"
-                android:paddingTop="15dp"
                 android:orientation="vertical"
-                >
+                android:paddingLeft="10dp"
+                android:paddingTop="15dp">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="姓名: "
-                        android:textStyle="bold"
-                        />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/pfind_name"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
                     android:orientation="horizontal"
-                    >
+                    android:paddingTop="5dp">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="走失时间: "
-                        android:textStyle="bold"
-                        />
+                        android:textStyle="bold" />
+
                     <TextView
                         android:id="@+id/pfind_date"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingTop="5dp"
                     android:orientation="horizontal"
-                    >
+                    android:paddingTop="5dp">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="失踪位置: "
-                        android:textStyle="bold"
-                        />
+                        android:textStyle="bold" />
+
                     <TextView
                         android:id="@+id/pfind_place"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
             </LinearLayout>
 
             <LinearLayout
-                android:paddingLeft="6dp"
-                android:paddingTop="5dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:paddingLeft="6dp"
+                android:paddingTop="5dp">
 
                 <TextView
                     android:id="@+id/myfind_status"
@@ -118,16 +113,13 @@
                     android:elevation="2dp"
                     android:gravity="center"
 
-                    android:textColor="@color/white"
-                     />
+                    android:textColor="@color/white" />
             </LinearLayout>
 
         </LinearLayout>
 
 
-
     </androidx.cardview.widget.CardView>
-
 
 
 </LinearLayout>
