--- a/app/src/main/res/layout/fragment_send.xml
+++ b/app/src/main/res/layout/fragment_send.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@drawable/bg"
+    android:orientation="vertical"
     tools:context=".ui.send.SendFragment">
     <!--发布信息页面-->
 
@@ -29,48 +29,41 @@
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
 
-            app:cardBackgroundColor="@color/light_sun"
+            android:foreground="?attr/selectableItemBackground"
 
-            android:foreground = "?attr/selectableItemBackground"
+            app:cardBackgroundColor="@color/light_sun"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="150dp"
                     android:paddingLeft="10dp"
                     android:paddingTop="20dp"
-                    android:src="@drawable/find2"
-                    />
+                    android:src="@drawable/find2" />
+
                 <TextView
                     android:id="@+id/send_submit1"
-                    android:paddingTop="53dp"
-                    android:paddingLeft="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="53dp"
                     android:text="我是救助者\n\n我想帮他们找到失踪的家人"
-                    android:textSize="17dp"
-                    />
+                    android:textSize="17dp" />
 
             </LinearLayout>
 
 
-
-
-
-
-
-
         </androidx.cardview.widget.CardView>
-       <ImageView
-           android:layout_width="match_parent"
-           android:layout_height="80dp"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="80dp" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_cardview2"
@@ -82,33 +75,31 @@
             android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
+            android:foreground="?attr/selectableItemBackground"
             app:cardBackgroundColor="@color/light_sun"
-            android:foreground = "?attr/selectableItemBackground"
             app:cardCornerRadius="20dp"
             app:cardElevation="8dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="150dp"
                     android:paddingLeft="10dp"
                     android:paddingTop="20dp"
-                    android:src="@drawable/find1"
-                    />
+                    android:src="@drawable/find1" />
+
                 <TextView
                     android:id="@+id/send_submit2"
-                    android:paddingTop="53dp"
-                    android:paddingLeft="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:paddingLeft="15dp"
+                    android:paddingTop="53dp"
                     android:text="我是寻亲者\n\n我想找到我的家属"
-                    android:textSize="17dp"
-                    />
+                    android:textSize="17dp" />
 
             </LinearLayout>
 
@@ -117,8 +108,6 @@
 
 
     </LinearLayout>
-
-
 
 
 </LinearLayout>
