--- a/app/src/main/res/layout/fragment_square.xml
+++ b/app/src/main/res/layout/fragment_square.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.square.SquareFragment">
-<!--广场页面-->
+    <!--广场页面-->
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
@@ -18,13 +18,12 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="寻人启示"
-            />
+            android:text="寻人启示" />
+
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="我想回家"
-            />
+            android:text="我想回家" />
 
 
     </com.google.android.material.tabs.TabLayout>
@@ -36,7 +35,6 @@
         android:layout_below="@+id/tablayout">
 
     </androidx.viewpager2.widget.ViewPager2>
-
 
 
 </LinearLayout>
