--- a/app/src/main/res/layout/photo_select.xml
+++ b/app/src/main/res/layout/photo_select.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--popupwindows用的是relative，所以layout_above属性记得设置-->
+<?xml version="1.0" encoding="utf-8"?><!--popupwindows用的是relative，所以layout_above属性记得设置-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,8 +20,8 @@
     <TextView
         android:id="@+id/line"
         android:layout_width="match_parent"
-        android:layout_above="@+id/from_albums"
         android:layout_height="0.1dp"
+        android:layout_above="@+id/from_albums"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:background="#D9D8D3" />
