--- a/app/src/main/res/layout/fragment_myinfo.xml
+++ b/app/src/main/res/layout/fragment_myinfo.xml
@@ -11,47 +11,46 @@
 
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="horizontal"
         android:paddingLeft="30dp"
         android:paddingTop="50dp">
-
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-
-            android:src="@drawable/eg_boy" />
-
+            android:id="@+id/myinfo_image"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:src="@drawable/eg_boy"
+            android:layout_marginTop="10dp"/>
         <TextView
-            android:layout_width="100dp"
+            android:id="@+id/myinfo_name"
+            android:layout_width="wrap_content"
             android:layout_height="80dp"
-            android:paddingLeft="30dp"
-
-            android:paddingTop="28dp"
+            android:paddingLeft="20dp"
+            android:paddingTop="34dp"
             android:text="用户名"
-            android:textSize="19dp" />
-
-        <ImageView
-            android:id="@+id/reset_name"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:paddingTop="32dp"
-            android:paddingRight="60dp"
-            android:paddingBottom="29dp"
-            android:src="@drawable/rectify"
-
-            />
+            android:textSize="18dp" />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/reset_name"
+                android:layout_height="25dp"
+                android:layout_width="25dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/rectify"
+                />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingTop="14dp"
-            android:paddingBottom="60dp">
-
-
+            android:layout_height="wrap_content"
+            android:paddingTop="18dp">
             <TextView
+                android:id="@+id/myinfo_auth"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="8dp"
@@ -65,8 +64,6 @@
                 android:textColor="@color/white"
                 android:textSize="16dp" />
         </LinearLayout>
-
-
     </LinearLayout>
 
     <LinearLayout
@@ -77,40 +74,28 @@
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
-
         <ImageView
-            android:id="@+id/image_myinfo"
-
             android:layout_width="40dp"
             android:layout_height="45dp"
             android:src="@drawable/myinfoo" />
-
         <TextView
-            android:id="@+id/text_myinfo"
             android:layout_width="270dp"
             android:layout_height="45dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:gravity="center"
-
             android:text="我的信息"
             android:textColor="@color/black"
             android:textSize="16sp" />
-
         <ImageView
-            android:id="@+id/into_myinfo"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:paddingLeft="10dp"
             android:src="@drawable/into"
-
             />
-
-
     </LinearLayout>
-
 
     <ImageView
         android:layout_width="match_parent"
@@ -125,20 +110,16 @@
         android:layout_height="45dp"
         android:background="@color/white"
         android:orientation="horizontal"
-
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
 
         <ImageView
-            android:id="@+id/image_myfind"
             android:layout_width="40dp"
             android:layout_height="45dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:src="@drawable/lingdang" />
-
         <TextView
-            android:id="@+id/text_myfind"
             android:layout_width="270dp"
             android:layout_height="45dp"
             android:layout_marginLeft="10dp"
@@ -147,19 +128,14 @@
             android:text="我的寻人信息"
             android:textColor="@color/black"
             android:textSize="16sp" />
-
         <ImageView
-            android:id="@+id/into_myfind"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:paddingLeft="10dp"
             android:src="@drawable/into"
-
             />
-
-
     </LinearLayout>
 
     <ImageView
@@ -177,17 +153,13 @@
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
-
         <ImageView
-            android:id="@+id/image_myrelative"
             android:layout_width="40dp"
             android:layout_height="45dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:src="@drawable/evenlope" />
-
         <TextView
-            android:id="@+id/text_myrelative"
             android:layout_width="270dp"
             android:layout_height="45dp"
             android:layout_marginLeft="10dp"
@@ -196,19 +168,13 @@
             android:text="我的寻亲信息"
             android:textColor="@color/black"
             android:textSize="16sp" />
-
         <ImageView
-            android:id="@+id/into_myrelative"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:paddingLeft="10dp"
-            android:src="@drawable/into"
-
-            />
-
-
+            android:src="@drawable/into" />
     </LinearLayout>
 
     <ImageView
@@ -226,17 +192,13 @@
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
-
         <ImageView
-            android:id="@+id/image_myclue"
             android:layout_width="40dp"
             android:layout_height="45dp"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
             android:src="@drawable/clue" />
-
         <TextView
-            android:id="@+id/text_myclue"
             android:layout_width="270dp"
             android:layout_height="45dp"
             android:layout_marginLeft="10dp"
@@ -245,19 +207,14 @@
             android:text="我提供的有关线索"
             android:textColor="@color/black"
             android:textSize="16sp" />
-
         <ImageView
-            android:id="@+id/into_myclue"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:paddingLeft="10dp"
             android:src="@drawable/into"
-
             />
-
-
     </LinearLayout>
 
     <ImageView
@@ -323,7 +280,7 @@
         android:paddingTop="120dp">
 
         <TextView
-            android:id="@+id/logout_myinfo"
+            android:id="@+id/myinfo_logout"
             android:layout_width="320dp"
             android:layout_height="45dp"
             android:background="@drawable/log_out"
