--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,18 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
     <color name="sun">#FFD159</color>
     <color name="heavy_sun">#E6BC50</color>
+    <color name="yellow1">#fef2d3</color>
+    <color name="yellow2">#fef5d9</color>
+    <color name="yellow3">#fdf8ea</color>
+    <color name="yellow4">#fef5e2</color>
+    <color name="yellow5">#fffaed</color>
+    <color name="yellow6">#fffcf3</color>
+    <color name="rouse">#fff3e9</color>
     <color name="light_sun">#FEFBF9</color>
+
     <color name="grey">#9b9b9b</color>
     <color name="config_color_select_bg">#FFF1F1F1</color>
     <color name="bottom">#D8D8D8</color>
